--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -28,7 +28,7 @@
 							<li><a href="/sign-in">Sign in</a></li>
 							<li><a href="/sign-up">Sign up</a></li>
 						</ul>
-						<ul class="nav navbar-nav navbar-right">
+						<ul id="nav-search" class="nav navbar-nav navbar-right">
 							<form class="navbar-form" action="/search" method="GET">
 								<label for="search" class="sr-only">search</label>
 			  					<div class="input-group">
@@ -62,4 +62,3 @@
 		</script>
 	</body>
 </html>
-<?php
