--- a/html/Assets/styles/style.scss
+++ b/html/Assets/styles/style.scss
@@ -11,7 +11,7 @@
 	max-width:100%;
 }
 a.navbar-brand{
-	padding: 4px;
+	padding: 4px 15px;
 }
 .navbar li a:hover{
 	color: #ffffff !important;
@@ -24,11 +24,14 @@ a.navbar-brand{
 	color: #696988 !important;
 	font-size: 20px;
 	text-transform: uppercase;
+	border-radius: 0px;
 }
 .navbar-toggle{
+	color: #696988 !important;
 	border: none;
 	margin: 0px;
 	font-size: 20px;
+	background-color: #121232 !important;
 }
 .navbar-toggle:hover{
 	color: #ffffff;
@@ -37,4 +40,17 @@ a.navbar-brand{
 .navbar-default .navbar-collapse, .navbar-default .navbar-form{
 	border: none !important;
     box-shadow: none !important;
+}
+.red{
+	background: red;
+}
+@media screen and (max-width: 991px){
+	#nav-search{
+		width: 240px;
+	}
+}
+@media screen and (max-width: 767px){
+	#nav-search input{
+		margin-left: 15px;
+	}
 }
