--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -17,10 +17,10 @@
 			<nav class="navbar navbar-default">
 				<div class="container">
 					<div class="navbar-header">
-						<button type="button" class="navbar-toggle btn" data-toggle="collapse" data-target="#nav-options">
+	      				<a class="navbar-brand" href="/"><img id="logo"src="Assets/images/starling.svg"></a>
+	    				<button type="button" class="navbar-toggle btn" data-toggle="collapse" data-target="#nav-options">
 					        <i class="fa fa-bars"></i>                        
 					    </button>
-	      				<a class="navbar-brand" href="#"><img id="logo"src="Assets/images/starling.svg"></a>
 	    			</div>
 					<div class="collapse navbar-collapse" id="nav-options">
 						<ul class="nav navbar-nav">
