--- a/html/Views/Home/index.phtml
+++ b/html/Views/Home/index.phtml
@@ -1,1 +1,30 @@
-<h1 class="jumbotron">This is homepage</h1>
+<div class="homepage-wrapper">
+	<div class="container">
+		<div class="col-xs-12 col-sm-6 col-sm-push-6 text-right welcome">
+			<h1>Welcome</h1>
+			to <img src="Assets/images/starling_text.svg">
+			<h2>A place to share your code</h2>
+		</div>
+		<div class="col-xs-12 col-sm-6 col-sm-pull-6">
+			<form action="/sign-up" method="post" class="sign-in-form">
+				<h2>Sign up</h2>
+				<div class="form-group">
+					<input class="form-control" type="text" name="email" placeholder="email">
+				</div>
+				<div class="form-group">
+					<input class="form-control" type="text" name="username" placeholder="username">
+				</div>
+				<div class="form-group">
+					<input class="form-control" type="text" name="password" placeholder="password">
+				</div>
+				<div class="form-group">
+					<input class="form-control" type="text" name="password-again" placeholder="password again">
+				</div>
+				<button type="submit" class="btn btn-default pull-right">Sign up</button>		
+			</form>
+		</div>
+	</div>
+	<div class="col-sm-12 homepage-img-wrap">
+		<img class="center-block img-responsive" src="Assets/images/starling_on_tree.svg">	
+	</div>
+</div>
