--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -17,36 +17,61 @@
 			<nav class="navbar navbar-default">
 				<div class="container">
 					<div class="navbar-header">
-	      				<a class="navbar-brand" href="/"><img id="logo"src="Assets/images/starling.svg"></a>
-	    				<button type="button" class="navbar-toggle btn" data-toggle="collapse" data-target="#nav-options">
-					        <i class="fa fa-bars"></i>                        
-					    </button>
-	    			</div>
-					<div class="collapse navbar-collapse" id="nav-options">
-						<ul class="nav navbar-nav">
-							<li><a href="/">Home</a></li>
-							<li><a href="/sign-in">Sign in</a></li>
-							<li><a href="/sign-up">Sign up</a></li>
-						</ul>
-						<ul id="nav-search" class="nav navbar-nav navbar-right">
-							<form class="navbar-form" action="/search" method="GET">
-								<label for="search" class="sr-only">search</label>
-			  					<div class="input-group">
-			  						<input class="form-control" name="search" type="text">
-									<span class="input-group-btn">
-										<button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
-									</span>
-								</div>
-							</form>
+						<a class="navbar-brand" href="/home">
+							<img class="logo" src="Assets/images/starling_white.svg" alt="logo">
+						</a>
+						<ul class="nav navbar-nav visible-xs">
+							<li>
+								<a class="nav navbar-nav visible-xs pull-right" href="#" data-toggle="modal" data-target="#sign-in">Sign in</a>
+							</li>
 						</ul>
 					</div>
+					<ul class="nav navbar-nav">
+						<li>
+							<form class="navbar-form" role="search" action="/search" method="get">
+								<div class="form-group">
+									<div class="input-group">
+										<input type="text" class="form-control" placeholder="Search" name="search ">
+										<span class="input-group-btn">
+											<button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+										</span>
+									</div>
+								</div>
+							</form>
+						</li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right hidden-xs">
+						<li>
+							<a href="#" data-toggle="modal" data-target="#sign-in">Sign in</a>
+						</li>
+					</ul>
 				</div>
 			</nav>
 		</header>
 
-		<section class="container">
+		<div class="modal fade" id="sign-in">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title">Modal title</h4>
+					</div>
+					<div class="modal-body">
+						<p>One fine body&hellip;</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						<button type="button" class="btn btn-primary">Save changes</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<section>
+			<div class="container">
 			<?php $this->viewFile('Views/flash_message.phtml'); ?>
 			<?php $this->viewToTemplate(); ?>
+			</div>
 		</section>
 		<footer>
 		</footer>
