--- a/html/Views/flash_message.phtml
+++ b/html/Views/flash_message.phtml
@@ -1,3 +1,6 @@
 <?php foreach($flash_messages as $message): ?>
-	<div class="alert alert-<?=$message['type']?>"><?=$message['message']?></div>
+	<div class="alert alert-<?=$message['type']?> alert-dismissible" role="alert">
+  		<button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>
+  		<?=$message['message']?>
+	</div>
 <?php endforeach ?>
