--- a/html/Assets/styles/style.scss
+++ b/html/Assets/styles/style.scss
@@ -1,11 +1,63 @@
+/*
+http://paletton.com/#uid=51Z1o0kvHqnlHxkrLv7-QlxIagj
+*/
+
 /*basic template*/
 @font-face {
     font-family: "Ubuntu";
     src: url("Ubuntu-R.ttf");
 }
+@mixin placeholder {
+ 	&.placeholder { @content; }
+ 	&:-moz-placeholder { @content; }
+ 	&::-moz-placeholder { @content; }
+ 	&::-webkit-input-placeholder { @content; }
+}
 *{
 	font-family: "Ubuntu";
 }
+.btn-default:not(.search-button){
+	border: 0px;
+	background-color: black;
+	color: white;
+	font-size: 22px;
+	height: 35px;
+	line-height: 22px;
+	padding: 7px;
+	padding-top: 5px;
+}
+.btn-default:not(.search-button):active{
+	background-color: #dddddd;
+	color: #444444;
+}
+.form-control:not(.search-input){
+	padding: 4px 10px;
+	font-size: 18px;
+	color: black;
+	box-shadow: none;
+	border: 1px solid #666666;
+	border-radius: 4px;
+	height: 35px;
+	@include placeholder{
+		color: #666666;
+	}
+}
+.form-control:focus{
+	outline: none !important;
+	border: 1px solid #C0CF02 !important;
+	box-shadow: 0px 0px 4px #C0CF02 !important;
+}
+.link{
+	color: #025A6A;
+}
+.link:hover{
+	color: #014450;
+}
+
+
+.modal-content .form-control{
+	border: 1px solid #dddddd;
+} 
 header{
 	.logo{
 		max-height: 100%;
@@ -25,9 +77,9 @@ header{
 		font-size: 16px;
 		color: black;
 		box-shadow: none;
-	}
-	.form-control::-moz-placeholder{
-		color: #666666;
+		@include placeholder{
+			color: #666666;
+		}
 	}
 	.form-control, .btn{
 		border: 1px solid #666666;
@@ -42,7 +94,7 @@ header{
 	}
 	.btn:hover{
 		border: 1px solid #666666;
-		background-color: #e6e6e6;
+		background-color: #dddddd;
 	}
 	.input-group{
 		width: 260px;
@@ -82,6 +134,9 @@ section{
 	background: url('../images/background.png') center top no-repeat;
 	background-size: cover;
 }
+.modal-content{
+	border-radius: 4px;
+}
 
 /*homepage*/
 .homepage-wrapper{
@@ -96,6 +151,8 @@ section{
 	}
 	.welcome{
 		font-size: 40px;
+		display: inline-block;
+		vertical-align: middle;
 		@media screen and (max-width: 1199px){
 			h2{
 				font-size: 0.9 * 40px;
@@ -119,33 +176,14 @@ section{
 	}
 	.sign-in-form{
 		width: 320px;
-		.form-control{
-			padding: 5px 10px;
-			font-size: 16px;
-			color: black;
-			box-shadow: none;
-			background-color: #e2e2e2;
-		}
-		.form-control::-moz-placeholder{
-			color: #666666;
-		}
-		.form-control{
-			border: 1px solid #666666;
-			border-radius: 4px;
-			height: 35px;
-		}
-		.btn{
-			border: 0px;
-			background-color: black;
-			color: white;
-			font-size: 22px;
-			height: 35px;
-			line-height: 22px;
-			padding: 7px;
-			padding-top: 5px;
-		}
 		@media screen and (max-width: 767px){
 				width: 100%;
 		}
+		.form-control{
+			background-color: #dddddd;
+		}
+	}
+	@media screen and (max-width: 767px){
+		padding-top: 30px;
 	}
 }
