--- a/html/Views/Home/index.phtml
+++ b/html/Views/Home/index.phtml
@@ -1,5 +1,5 @@
 <div class="homepage-wrapper">
-	<div class="container">
+	<div class="row">
 		<div class="col-xs-12 col-sm-6 col-sm-push-6 text-right welcome">
 			<h1>Welcome</h1>
 			to <img src="Assets/images/starling_text.svg">
@@ -9,16 +9,16 @@
 			<form action="/sign-up" method="post" class="sign-in-form">
 				<h2>Sign up</h2>
 				<div class="form-group">
-					<input class="form-control" type="text" name="email" placeholder="email">
+					<input class="form-control" type="email" name="email" placeholder="email">
 				</div>
 				<div class="form-group">
 					<input class="form-control" type="text" name="username" placeholder="username">
 				</div>
 				<div class="form-group">
-					<input class="form-control" type="text" name="password" placeholder="password">
+					<input class="form-control" type="password" name="password" placeholder="password">
 				</div>
 				<div class="form-group">
-					<input class="form-control" type="text" name="password-again" placeholder="password again">
+					<input class="form-control" type="password" name="password-again" placeholder="password again">
 				</div>
 				<button type="submit" class="btn btn-default pull-right">Sign up</button>		
 			</form>
