--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -31,9 +31,9 @@
 							<form class="navbar-form" role="search" action="/search" method="get">
 								<div class="form-group">
 									<div class="input-group">
-										<input type="text" class="form-control" placeholder="Search" name="search ">
+										<input type="text" class="form-control search-input" placeholder="Search" name="search ">
 										<span class="input-group-btn">
-											<button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+											<button type="submit" class="btn btn-default search-button"><i class="fa fa-search"></i></button>
 										</span>
 									</div>
 								</div>
@@ -53,16 +53,23 @@
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title">Modal title</h4>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="fa fa-close"></i></button>
+						<h2 class="modal-title">Sign in</h2>
 					</div>
+					<form action="/sign-in" method="post">
 					<div class="modal-body">
-						<p>One fine body&hellip;</p>
+							 <div class="form-group">
+							 	<input type="text" class="form-control" placeholder="username">
+							 </div>
+							 <div class="form-group">
+							 	<input type="password" class="form-control" placeholder="password">
+							</div>
 					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-						<button type="button" class="btn btn-primary">Save changes</button>
+						<a class="btn btn-link pull-left link" href="/forgotten-password">Forgot your password?</a>
+						<button type="submit" class="btn btn-default">Sign in</button>
 					</div>
+					</form>
 				</div>
 			</div>
 		</div>
