--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -22,7 +22,7 @@
 						</a>
 						<ul class="nav navbar-nav visible-xs">
 							<li>
-								<a class="nav navbar-nav visible-xs pull-right" href="#" data-toggle="modal" data-target="#sign-in">Sign in</a>
+								<a class="nav navbar-nav visible-xs pull-right" href="#" data-toggle="modal" data-target="#sign-in-modal">Sign in</a>
 							</li>
 						</ul>
 					</div>
@@ -42,27 +42,27 @@
 					</ul>
 					<ul class="nav navbar-nav navbar-right hidden-xs">
 						<li>
-							<a href="#" data-toggle="modal" data-target="#sign-in">Sign in</a>
+							<a href="#" data-toggle="modal" data-target="#sign-in-modal">Sign in</a>
 						</li>
 					</ul>
 				</div>
 			</nav>
 		</header>
 
-		<div class="modal fade" id="sign-in">
+		<div class="modal fade" id="sign-in-modal">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="fa fa-close"></i></button>
 						<h2 class="modal-title">Sign in</h2>
 					</div>
-					<form action="/sign-in" method="post">
+					<form>
 					<div class="modal-body">
 							 <div class="form-group">
-							 	<input type="text" class="form-control" placeholder="username">
+							 	<input type="text" class="form-control" placeholder="username" required>
 							 </div>
 							 <div class="form-group">
-							 	<input type="password" class="form-control" placeholder="password">
+							 	<input type="password" class="form-control" placeholder="password" required>
 							</div>
 					</div>
 					<div class="modal-footer">
