--- a/html/Views/Home/index.phtml
+++ b/html/Views/Home/index.phtml
@@ -8,19 +8,26 @@
 		<div class="col-xs-12 col-sm-6 col-sm-pull-6">
 			<form action="" method="post" id="sign-up-form">
 				<h2>Sign up</h2>
-				<div class="form-group">
+				<div class="form-group" id="email-wrapper">
 					<input class="form-control" type="email" name="email" placeholder="email" required>
+				</div>
+				<div class="alert">
 				</div>
 				<div class="form-group" id="username-wrapper">
 					<input class="form-control" type="text" name="username" placeholder="username" required>
 				</div>
+				<div class="alert">
+				</div>
 				<div class="form-group" id="password-wrapper">
 					<input class="form-control" type="password" name="password" placeholder="password" required>
+				</div>
+				<div class="alert">
 				</div>
 				<div class="form-group" id="password-again-wrapper">
 					<input class="form-control" type="password" name="password-again" placeholder="password again" required>
 				</div>
-				<div class="alert alert-danger" role="alert">Passwords do not match!</div>
+				<div class="alert">
+				</div>
 				<button type="submit" class="btn btn-default pull-right">Sign up</button>		
 			</form>
 			<script src="Assets/javascript/sign-up-form.js"></script>
