--- a/html/Assets/styles/style.css
+++ b/html/Assets/styles/style.css
@@ -58,10 +58,19 @@ http://paletton.com/#uid=b1Z3m0d0kvHqnlHxkrLv7-QlxIagj
   border: 1px solid #D23702 !important;
   box-shadow: 0px 0px 4px #D23702 !important; }
 
+.alert {
+  margin-top: 20px;
+  margin-bottom: 10px; }
+
 .alert-danger {
   color: white;
   background-color: #AB2C00;
   border: 1px solid #822100; }
+
+.alert-success {
+  color: white;
+  background-color: #9DA900;
+  border: 1px solid #778000; }
 
 .modal-content .form-control {
   border: 1px solid #dddddd; }
@@ -126,7 +135,7 @@ header .nav a:hover {
 section {
   margin-top: -20px;
   min-height: 960px;
-  background: url("../images/background.png") center top no-repeat;
+  background: black url("../images/background.png") center top no-repeat;
   background-size: cover; }
 
 .modal-content {
@@ -166,6 +175,8 @@ section {
         width: 100%; } }
     .homepage-wrapper #sign-up-form .form-control {
       background-color: #dddddd; }
+    .homepage-wrapper #sign-up-form .alert {
+      display: none; }
   @media screen and (max-width: 767px) {
     .homepage-wrapper {
       padding-top: 30px; } }
