--- a/html/Views/Home/index.phtml
+++ b/html/Views/Home/index.phtml
@@ -6,29 +6,28 @@
 			<h2>A place to share your code</h2>
 		</div>
 		<div class="col-xs-12 col-sm-6 col-sm-pull-6">
-			<form action="" method="post" id="sign-up-form">
+			<form action="/sign-up" method="post" id="sign-up-form">
 				<h2>Sign up</h2>
 				<div class="form-group" id="email-wrapper">
 					<input class="form-control" type="email" name="email" placeholder="email" required>
 				</div>
-				<div class="alert">
-				</div>
 				<div class="form-group" id="username-wrapper">
 					<input class="form-control" type="text" name="username" placeholder="username" required>
-				</div>
-				<div class="alert">
 				</div>
 				<div class="form-group" id="password-wrapper">
 					<input class="form-control" type="password" name="password" placeholder="password" required>
 				</div>
-				<div class="alert">
-				</div>
 				<div class="form-group" id="password-again-wrapper">
 					<input class="form-control" type="password" name="password-again" placeholder="password again" required>
 				</div>
-				<div class="alert">
+				<div class="row">
+					<div class="col-xs-8">
+						<div class="alert alert-danger"></div>
+					</div>
+					<div class="col-xs-4">
+						<button type="submit" class="btn btn-default pull-right">Sign up</button>		
+					</div>
 				</div>
-				<button type="submit" class="btn btn-default pull-right">Sign up</button>		
 			</form>
 			<script src="Assets/javascript/sign-up-form.js"></script>
 		</div>
