--- a/html/Assets/styles/style.css
+++ b/html/Assets/styles/style.css
@@ -5,29 +5,112 @@ http://paletton.com/#uid=b1Z3m0d0kvHqnlHxkrLv7-QlxIagj
 @font-face {
   font-family: "Ubuntu";
   src: url("Ubuntu-R.ttf"); }
+/*text*/
 * {
   font-family: "Ubuntu"; }
 
-.btn-default:not(.search-button) {
+h1, h2, h3, p {
+  color: #222222; }
+
+h1 {
+  font-size: 40px; }
+
+h2 {
+  font-size: 30px; }
+
+h3 {
+  font-size: 20px; }
+
+p {
+  font-size: 14px; }
+
+.link {
+  color: #025A6A; }
+
+.link:hover {
+  color: #014450; }
+
+/*----*/
+/*buttons*/
+.btn:not(.search-button) {
   border: 0px;
-  background-color: black;
   color: white;
   font-size: 22px;
   height: 35px;
-  line-height: 22px;
-  padding: 7px;
-  padding-top: 5px; }
+  font-size: 22px;
+  line-height: 35px;
+  padding: 0px 7px; }
 
-.btn-default:not(.search-button):active {
-  background-color: #dddddd;
-  color: #444444; }
+.btn-default:not(.search-button) {
+  background-color: black; }
+
+.btn-default:not(.search-button):hover {
+  background-color: black; }
+
+.btn-danger:not(.search-button) {
+  background-color: #822100; }
+
+.btn-danger:not(.search-button):hover {
+  background-color: #ab2c00; }
+
+.btn-success:not(.search-button) {
+  background-color: #778000; }
+
+.btn-success:not(.search-button):hover {
+  background-color: #9da900; }
+
+.btn-info:not(.search-button) {
+  background-color: #014450; }
+
+.btn-info:not(.search-button):hover {
+  background-color: #025a6a; }
+
+/*----*/
+/*alerts*/
+.alert {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  border: 0px;
+  color: white; }
+
+.alert-danger {
+  background-color: #AB2C00; }
+  .alert-danger .close {
+    color: #d23702 !important;
+    opacity: 1;
+    text-shadow: none; }
+  .alert-danger .close:hover {
+    color: #822100; }
+
+.alert-success {
+  background-color: #9da900; }
+  .alert-success .close {
+    color: #C0CF02;
+    opacity: 1;
+    text-shadow: none; }
+  .alert-success .close:hover {
+    color: #778000; }
+
+.alert-info {
+  background-color: #025a6a; }
+  .alert-info .close {
+    color: #046D81;
+    opacity: 1;
+    text-shadow: none; }
+  .alert-info .close:hover {
+    color: #014450; }
+
+/*----*/
+/*inputs*/
+section > .container {
+  background-color: white; }
 
 .form-control:not(.search-input) {
   padding: 4px 10px;
   font-size: 18px;
   color: black;
   box-shadow: none;
-  border: 1px solid #666666;
+  border: 1px solid #dddddd;
   border-radius: 4px;
   height: 35px; }
   .form-control:not(.search-input).placeholder {
@@ -41,42 +124,26 @@ http://paletton.com/#uid=b1Z3m0d0kvHqnlHxkrLv7-QlxIagj
 
 .form-control:focus {
   outline: none !important;
-  border: 1px solid #C0CF02 !important;
-  box-shadow: 0px 0px 4px #C0CF02 !important; }
+  border: 1px solid #178599;
+  /*box-shadow: 0px 0px 4px #046d81 !important;*/ }
 
-.link {
-  color: #025A6A; }
-
-.link:hover {
-  color: #014450; }
-
-.has-error * {
+.has-error *, .has-error *:focus {
+  outline: none !important;
   border: 1px solid #D23702 !important;
-  box-shadow: 0px 0px 4px #D23702 !important; }
+  box-shadow: none !important;
+  /*box-shadow: 0px 0px 4px #D23702 !important;*/ }
 
-.has-error *:focus {
-  border: 1px solid #D23702 !important;
-  box-shadow: 0px 0px 4px #D23702 !important; }
+.has-success *, .has-success *:focus {
+  border: 1px solid #c0cf02 !important;
+  box-shadow: none !important;
+  /*box-shadow: 0px 0px 4px #c0cf02 !important;*/ }
 
-.alert {
-  margin-top: 20px;
-  margin-bottom: 10px; }
-
-.alert-danger {
-  color: white;
-  background-color: #AB2C00;
-  border: 1px solid #822100; }
-
-.alert-success {
-  color: white;
-  background-color: #9DA900;
-  border: 1px solid #778000; }
-
+/*----*/
 .modal-content .form-control {
   border: 1px solid #dddddd; }
 
 header .logo {
-  max-height: 100%;
+  height: 31.2px;
   max-width: 100%; }
 header .navbar {
   background-color: black;
@@ -130,7 +197,11 @@ header .nav a:hover {
   header .navbar-nav {
     margin: 0px; }
   header .input-group {
-    width: 100%; } }
+    width: 100%; }
+  header a.navbar-nav {
+    padding-left: 0px !important; }
+  header .navbar-brand {
+    margin-right: -5px !important; } }
 
 section {
   margin-top: -20px;
