--- a/html/Views/Home/index.phtml
+++ b/html/Views/Home/index.phtml
@@ -1,38 +1,42 @@
 <div class="homepage-wrapper">
-	<div class="row">
-		<div class="col-xs-12 col-sm-6 col-sm-push-6 text-right welcome">
-			<h1>Welcome</h1>
-			to <img src="Assets/images/starling_text.svg">
-			<h2>A place to share your code</h2>
-		</div>
-		<div class="col-xs-12 col-sm-6 col-sm-pull-6">
-			<form action="/sign-up" method="post" id="sign-up-form">
-				<h2>Sign up</h2>
-				<div class="form-group" id="email-wrapper">
-					<input class="form-control" type="email" name="email" placeholder="email" required>
-				</div>
-				<div class="form-group" id="username-wrapper">
-					<input class="form-control" type="text" name="username" placeholder="username" required>
-				</div>
-				<div class="form-group" id="password-wrapper">
-					<input class="form-control" type="password" name="password" placeholder="password" required>
-				</div>
-				<div class="form-group" id="password-again-wrapper">
-					<input class="form-control" type="password" name="password-again" placeholder="password again" required>
-				</div>
-				<div class="row">
-					<div class="col-xs-8">
-						<div class="alert alert-danger"></div>
+	<div class="container">
+		<?php $this->viewFile('Views/flash_message.phtml'); ?>
+		<div class="alert alert-success alert-dismisible"><button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>This is some alert</div>
+		<div class="row">
+			<div class="col-xs-12 col-sm-6 col-sm-push-6 text-right welcome">
+				<h1>Welcome</h1>
+				to <img src="Assets/images/starling_text.svg">
+				<h2>A place to share your code</h2>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-sm-pull-6">
+				<form action="/sign-up" method="post" id="sign-up-form">
+					<h2>Sign up</h2>
+					<div class="form-group" id="email-wrapper">
+						<input class="form-control" type="email" name="email" placeholder="email" required>
 					</div>
-					<div class="col-xs-4">
-						<button type="submit" class="btn btn-default pull-right">Sign up</button>		
+					<div class="form-group" id="username-wrapper">
+						<input class="form-control" type="text" name="username" placeholder="username" required>
 					</div>
-				</div>
-			</form>
-			<script src="Assets/javascript/sign-up-form.js"></script>
+					<div class="form-group" id="password-wrapper">
+						<input class="form-control" type="password" name="password" placeholder="password" required>
+					</div>
+					<div class="form-group" id="password-again-wrapper">
+						<input class="form-control" type="password" name="password-again" placeholder="password again" required>
+					</div>
+					<div class="row">
+						<div class="col-xs-8">
+							<div class="alert alert-danger"></div>
+						</div>
+						<div class="col-xs-4">
+							<button type="submit" class="btn btn-default pull-right">Sign up</button>		
+						</div>
+					</div>
+				</form>
+				<script src="Assets/javascript/sign-up-form.js"></script>
+			</div>
 		</div>
-	</div>
-	<div class="col-sm-12 homepage-img-wrap">
-		<img class="center-block img-responsive" src="Assets/images/starling_on_tree.svg">	
+		<div class="col-sm-12 homepage-img-wrap">
+			<img class="center-block img-responsive" src="Assets/images/starling_on_tree.svg">	
+		</div>
 	</div>
 </div>
