--- a/html/Assets/styles/style.scss
+++ b/html/Assets/styles/style.scss
@@ -14,6 +14,11 @@ http://paletton.com/#uid=b1Z3m0d0kvHqnlHxkrLv7-QlxIagj
  	&::-webkit-input-placeholder { @content; }
 }
 
+html{
+	min-width: 320px;
+}
+
+
 /*text*/
 *{
 	font-family: "Ubuntu";
@@ -156,6 +161,15 @@ p{
 
 /*----*/
 
+/*pagination*/
+
+.pagination a{
+	border-radius: 0px !important;
+	border: 0px !important;
+}
+
+/*----*/
+
 .modal-content .form-control{
 	border: 1px solid #dddddd;
 } 
@@ -250,7 +264,7 @@ footer{
 .homepage-wrapper{
 	padding-top: 20px;
 	background: black url('../images/background.png') center top no-repeat;
-	background-size: cover;
+	background-size: auto 846px;
 	h2{
 		color: white;
 		font-size: 40px;
@@ -310,5 +324,6 @@ footer{
 	}
 	@media screen and (max-width: 767px){
 		padding-top: 30px;
+		background-size: cover;
 	}
 }
