--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -31,7 +31,7 @@
 							<form class="navbar-form" role="search" action="/search" method="get">
 								<div class="form-group">
 									<div class="input-group">
-										<input type="text" class="form-control search-input" placeholder="Search" name="search ">
+										<input type="text" class="form-control search-input" placeholder="Search" name="search">
 										<span class="input-group-btn">
 											<button type="submit" class="btn btn-default search-button"><i class="fa fa-search"></i></button>
 										</span>
@@ -49,45 +49,12 @@
 			</nav>
 		</header>
 
-		<div class="modal fade" id="sign-in-modal">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="fa fa-close"></i></button>
-						<h2 class="modal-title">Sign in</h2>
-					</div>
-					<form>
-					<div class="modal-body">
-							 <div class="form-group">
-							 	<input type="text" class="form-control" placeholder="username" required>
-							 </div>
-							 <div class="form-group">
-							 	<input type="password" class="form-control" placeholder="password" required>
-							</div>
-					</div>
-					<div class="modal-footer">
-						<a class="btn btn-link pull-left link" href="/forgotten-password">Forgot your password?</a>
-						<button type="submit" class="btn btn-default">Sign in</button>
-					</div>
-					</form>
-				</div>
-			</div>
-		</div>
+		<?php $this->viewFile('Views/miscellaneous/sign_in_modal.phtml'); ?>
 
 		<section>
 			<?php $this->viewToTemplate(); ?>
 		</section>
 		<footer>
 		</footer>
-		
-		<script>
-			$("h1").click(function(){
-				$.ajax({
-					type : "get",
-					url : "/home/change-color",
-					dataType : "script",
-				});
-			});
-		</script>
 	</body>
 </html>
