--- a/html/Assets/styles/style.scss
+++ b/html/Assets/styles/style.scss
@@ -43,6 +43,7 @@ p{
 }
 .link:hover{
 	color: #014450;
+	text-decoration: none;
 }
 
 /*----*/
@@ -65,22 +66,22 @@ p{
 	background-color: black;
 }
 .btn-danger:not(.search-button){
-	background-color: #822100;
-}
-.btn-danger:not(.search-button):hover{
 	background-color: #ab2c00;
 }
-.btn-success:not(.search-button){
-	background-color: #778000;
+.btn-danger:not(.search-button):hover{
+	background-color: #822100;
 }
-.btn-success:not(.search-button):hover{
+.btn-success:not(.search-button){
 	background-color: #9DA900;
 }
+.btn-success:not(.search-button):hover{
+	background-color: #778000;
+}
 .btn-info:not(.search-button){
-	background-color: #014450;
+	background-color: #025a6a;
 }
 .btn-info:not(.search-button):hover{
-	background-color: #025a6a;
+	background-color: #014450;
 }
 
 /*----*/
@@ -131,8 +132,6 @@ p{
 /*inputs*/
 
 .form-control:not(.search-input){
-	padding: 4px 10px;
-	font-size: 18px;
 	color: black;
 	box-shadow: none;
 	border: 1px solid #dddddd;
@@ -161,11 +160,45 @@ p{
 
 /*----*/
 
+/*checkbox*/
+
+.checkbox{
+	input[type="checkbox"]{
+		display: none;
+	}
+	label{
+		padding: 0px 5px;
+		vertical-align: top;
+	}
+	.checkbox-button{
+		font-size: 18px;
+		vertical-align: bottom;
+	}
+	.checkbox-button:before{
+		content: '\f096';
+		letter-spacing: 3px;
+	}
+	input[type="checkbox"]:checked + .checkbox-button:before{
+		content: '\f046';
+		letter-spacing: 0px;
+	}
+}
+
+/*----*/
+
 /*pagination*/
 
 .pagination a{
 	border-radius: 0px !important;
 	border: 0px !important;
+}
+
+/*----*/
+
+/*modal*/
+
+.modal-content{
+	border-radius: 4px;
 }
 
 /*----*/
@@ -251,20 +284,38 @@ header{
 }
 section{
 	margin-top: -20px;
+	min-height: 846px;
 }
-.modal-content{
-	border-radius: 4px;
-}
+
 footer{
 	background-color: black;
-	height: 120px;
+	height: 183px;
 }
+
+/*sign-in-modal*/
+
+#sign-in-modal{
+	.link{
+		margin-bottom: 0px;
+		line-height: 20px;
+	}
+	.checkbox{
+		margin: 0px;
+	}
+	.form-control{
+		padding: 4px 10px;
+		font-size: 18px;
+	}
+}
+
+/*----*/
 
 /*homepage*/
 .homepage-wrapper{
 	padding-top: 20px;
 	background: black url('../images/background.png') center top no-repeat;
 	background-size: auto 846px;
+	min-height: 846px;
 	h2{
 		color: white;
 		font-size: 40px;
@@ -312,6 +363,8 @@ footer{
 		}
 		.form-control{
 			background-color: #dddddd;
+			padding: 4px 10px;
+			font-size: 18px;
 		}
 		.row{
 			height: 54px;
