--- a/html/Views/Error/error404.phtml
+++ b/html/Views/Error/error404.phtml
@@ -15,6 +15,13 @@
 		<div class="form-group has-error">
 			<input type="text" class="form-control" placeholder="placeholder" />
 		</div>
+		<div class="checkbox">
+			<label>
+				<input type="checkbox" name="rememberMe" value="1">
+				<i class="fa checkbox-button"></i>
+				Remember me
+			</label>
+		</div>
 		<div class="form-group has-success">
 			<input type="text" class="form-control" placeholder="placeholder" />
 		</div>
