--- a/html/Views/Home/index.phtml
+++ b/html/Views/Home/index.phtml
@@ -1,6 +1,7 @@
 <div class="homepage-wrapper">
 	<div class="container">
 		<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+		<div class="alert alert-success alert-dismisible"><button type="button" class="close" data-dismiss="alert"><i class="fa fa-close"></i></button>This is some alert</div>
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-sm-push-6 text-right welcome">
 				<h1>Welcome</h1>
