--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -9,7 +9,7 @@
 		<link href="Assets/bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 		<link href="Assets/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 		<link href="Assets/styles/style.css" rel="stylesheet" type="text/css">
-		<script src="Assets/javascript/jquery-2.1.3.js"></script>
+		<script src="Assets/jquery-2.1.3./jquery-2.1.3.js"></script>
 		<script src="Assets/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
 	</head>
 	<body>
