--- a/html/Views/miscellaneous/sign_in_modal.phtml
+++ b/html/Views/miscellaneous/sign_in_modal.phtml
@@ -13,9 +13,21 @@
 					 <div class="form-group">
 					 	<input type="password" class="form-control" name="password" placeholder="password" required>
 					</div>
+					<div class="row">
+						<div class="col-sm-6 checkbox">
+							<label>
+								<input type="checkbox" name="rememberMe" value="1">
+								<i class="fa checkbox-button"></i>
+								Remember me
+							</label>
+						</div>
+						<div class="col-sm-6 text-right">
+							<a class="link">Did you forget your password?</a>
+						</div>
+					</div>
 				</div>
 				<div class="modal-footer">
-					<a class="btn btn-link pull-left link" href="/forgotten-password">Forgot your password?</a>
+					<a class="btn btn-info pull-left" href="/forgotten-password">Create new acount</a>
 					<button type="submit" class="btn btn-default">Sign in</button>
 				</div>
 			</form>
