--- a/html/Views/Error/error404.phtml
+++ b/html/Views/Error/error404.phtml
@@ -30,5 +30,5 @@
 	<button class="btn btn-danger">Button</button>
 	<button class="btn btn-success">Button</button>
 	<button class="btn btn-info">Button</button>
-	<h2><?php echo $this->refererURI;?></h2>
+	<h2><?php echo getEndURI();?></h2>
 </div>
