--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -6,11 +6,11 @@
 		<meta keywords="<?=$keywords?>" description="<?=$description?>">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title><?=$title?></title>
-		<link href="Assets/bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-		<link href="Assets/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-		<link href="Assets/styles/style.css" rel="stylesheet" type="text/css">
-		<script src="Assets/jquery-2.1.3./jquery-2.1.3.js"></script>
-		<script src="Assets/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+		<link href="Includes/bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link href="Includes/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+		<link href="Includes/styles/style.css" rel="stylesheet" type="text/css">
+		<script src="Includes/jquery-2.1.3./jquery-2.1.3.js"></script>
+		<script src="Includes/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<header>
@@ -18,7 +18,7 @@
 				<div class="container">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="/home">
-							<img class="logo" src="Assets/images/starling_white.svg" alt="logo">
+							<img class="logo" src="Includes/images/starling_white.svg" alt="logo">
 						</a>
 						<ul class="nav navbar-nav visible-xs">
 							<li>
